// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`properties/multiperson > not readonly 1`] = `
<div>
  <div
    class="Combobox MultiPerson octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container react-select__value-container--is-multi"
      >
        <div
          class="react-select__multi-value"
        >
          <div
            class="react-select__multi-value__label"
          >
            <div
              class="MultiPerson-item"
            >
              
              username-1
              
              
            </div>
          </div>
          <div
            class="react-select__multi-value__remove"
            role="button"
            tabindex="-1"
          >
            <i
              class="CompassIcon icon-close"
            />
          </div>
        </div>
        <div
          class="react-select__multi-value"
        >
          <div
            class="react-select__multi-value__label"
          >
            <div
              class="MultiPerson-item"
            >
              
              username-2
              
              
            </div>
          </div>
          <div
            class="react-select__multi-value__remove"
            role="button"
            tabindex="-1"
          >
            <i
              class="CompassIcon icon-close"
            />
          </div>
        </div>
        
        
        <input
          aria-controls="cl-1"
          aria-expanded="false"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`properties/multiperson > not readonly not existing user 1`] = `
<div>
  <div
    class="Combobox MultiPerson octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container react-select__value-container--is-multi"
      >
        
        
        <div
          class="react-select__placeholder"
        >
          Empty
        </div>
        <input
          aria-controls="cl-0"
          aria-expanded="false"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`properties/multiperson > readonly view 1`] = `
<div>
  <div
    class="MultiPerson octo-propertyvalue octo-propertyvalue--readonly"
  >
    <div
      class="MultiPerson-item"
    >
      
      username-1
      
      
    </div>
    <div
      class="MultiPerson-item"
    >
      
      username-2
      
      
    </div>
  </div>
</div>
`;

exports[`properties/multiperson > user dropdown open 1`] = `
<div>
  <div
    class="Combobox MultiPerson octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container react-select__value-container--is-multi"
      >
        <div
          class="react-select__multi-value"
        >
          <div
            class="react-select__multi-value__label"
          >
            <div
              class="MultiPerson-item"
            >
              
              username-1
              
              
            </div>
          </div>
          <div
            class="react-select__multi-value__remove"
            role="button"
            tabindex="-1"
          >
            <i
              class="CompassIcon icon-close"
            />
          </div>
        </div>
        <div
          class="react-select__multi-value"
        >
          <div
            class="react-select__multi-value__label"
          >
            <div
              class="MultiPerson-item"
            >
              
              username-2
              
              
            </div>
          </div>
          <div
            class="react-select__multi-value__remove"
            role="button"
            tabindex="-1"
          >
            <i
              class="CompassIcon icon-close"
            />
          </div>
        </div>
        
        
        <input
          aria-activedescendant="cl-2-option-0"
          aria-controls="cl-2"
          aria-expanded="true"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    <div
      class="Combobox__menu react-select__menu "
    >
      <div
        class="react-select__menu-list"
        id="cl-2"
        role="listbox"
      >
        
        <div
          aria-selected="true"
          class="react-select__option react-select__option--is-focused react-select__option--is-selected"
          id="cl-2-option-0"
          role="option"
        >
          <div
            class="MultiPerson-item"
          >
            
            username-1
            
            
          </div>
        </div>
        <div
          aria-selected="true"
          class="react-select__option react-select__option--is-selected"
          id="cl-2-option-1"
          role="option"
        >
          <div
            class="MultiPerson-item"
          >
            
            username-2
            
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-2-option-2"
          role="option"
        >
          <div
            class="MultiPerson-item"
          >
            
            username-3
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
